Fixed text overlapping on some images in list.

--- a/src/scss/modules/_list.scss
+++ b/src/scss/modules/_list.scss
@@ -21,7 +21,7 @@ ul.list {
       }
 
       @media(min-width: $minWidthTablette) {
-        width: 60%;
+        width: 58%;
         position: absolute;
         z-index: 10;
         right: 0;
